# gpu-metric-finder

./: .gitignore  Dockerfile  README.md  start.sh
.github/workflows/: deploy.yml
cpp/: CMakeLists.txt
cpp/include/: cuda_workload.h
cpp/src/: cuda_workload.cu  main.cpp  socket_server.cpp
python/backend/: main.py  monitor.py  requirements.txt
static/: index.html
terraform/: alb.tf  ecs.tf  main.tf  networking.tf  outputs.tf  sns.tf  variables.tf
